--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
+    "firebase-tools": "^11.24.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
