--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "assenfuego-api",
   "description": "Cloud Functions for Firebase",
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "firebase-tools": "^11.24.0",
